--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
       <td class="cell" id="8"></td>
     </tr>
   </table>
-  <div class="endgame">
+  <div class="end">
     <div class="text"></div>
   </div>
   <div class="selectSym">
     <h2 class="h3">Unbeatable Tic Tac Toe</h3>
+      <h5>X goes first</h5>
       <br />
       <button type="button" class="btn btn-danger" onClick="selectSym('X')">X</button>
       <button type="button" class="btn btn-danger" onClick="selectSym('O')">O</button>
@@ -52,7 +53,7 @@
       <h4>pick a symbol to start</h4>
   </div>
   <div class="text-center">
-    <button type="button" class="btn btn-secondary center-block" onClick="startGame()">Start Over</button>
+    <button type="button" class="btn btn-secondary center-block" onClick="start()">Start Over</button>
   </div>
   <script src="Main.js"></script>
 </body>
