--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <h4>pick a symbol to start</h4>
   </div>
   <div class="text-center">
-    <button type="button" class="btn btn-secondary center-block" onClick="start()">Start Over</button>
+    <button type="button" class="btn btn-dark center-block" onClick="start()">Start Over</button>
   </div>
   <script src="Main.js"></script>
 </body>
